added database props

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/luxoftTest
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.jpa.generate-ddl=true
+#spring.main.allow-bean-definition-overriding=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#security.oauth2.client.clientId=452133146235-jks0936rl5f38pca8b0cd2i5pqlrutpu.apps.googleusercontent.com
+#
+#security.oauth2.client.clientSecret=d1vM0thGPs6uOPJGkJuYqNaE
+#security.oauth2.client.clientAuthenticationScheme=form
+#security.oauth2.client.scope=openid,email,profile
+#security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
+#security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
+#security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
+#security.oauth2.resource.preferTokenInfo=true
+#spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:9091/api/oauth2/google
+
+server.port=9091
+#
+#spring.session.jdbc.initialize-schema=always
+#spring.session.jdbc.table-name=SPRING_SESSION
+#spring.session.jdbc.schema=classpath:session_tables.sql
 
