--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!--        <dependency>-->
         <!--            <groupId>org.springframework.security.oauth.boot</groupId>-->
         <!--            <artifactId>spring-security-oauth2-autoconfigure</artifactId>-->
